fix(cleanup): constants in constants folder, MovableModal component, ROS_TOPICS enum, unsubscribing when changing topic

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 VITE_PORT=
 VITE_ROS_BRIDGE_SERVER_URL=
 
+VITE_HTTPS=true
+VITE_SSL_CERT=
+VITE_SSL_KEY=
+
+VITE_HMR_PORT=443
+
 # password as MD5 hash
 VITE_LOCAL_PASSWORD=
 VITE_LOCAL_USERNAME=
