fix(https): removed ros_bridge_url env, added readme for certs

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@ VITE_PORT=
 VITE_ROS_BRIDGE_SERVER_URL=
 
 VITE_HTTPS=true
-VITE_SSL_CERT=
-VITE_SSL_KEY=
+VITE_SSL_CERT_PATH=
+VITE_SSL_KEY_PATH=
 
 # password as MD5 hash
 VITE_LOCAL_PASSWORD=
